overflowing scroll bug fixed

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2,7 +2,7 @@
 
 html {
   scroll-behavior: smooth;
-  overscroll-behavior: none;
+  overflow-x: hidden;
 }
 
 body {
